--- a/index.html
+++ b/index.html
@@ -43,38 +43,38 @@
               <p class="text-slider">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
               <a class="button button--red slide__button" href="#">Узнать больше</a>
             </div>
-            <div class="slider-item-one">
+            <div class="slider-link slider-item-one">
               <img src="img/nerds-index-slide1_1.png" width="760" height="431" alt="Картинка с телефонами">
             </div>
           </div>
 
           <div class="slider-item">
-            <div class="slider-item-wrapper2">
-              <h3>Любим математику как никто другой.</h3>
-              <p class="text-slider">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <div class="slider-item-wrapper slider-item-wrapper-two">
+              <h3>Любим математику как никто другой</h3>
+              <p class="text-slider">Никакого креатива, только математические формулы <br>для расчета идеальных пропорций.</p>
               <a class="button button--red slide__button" href="#">Узнать больше</a>
             </div>
-            <div class="slider-item-two">
+            <div class="slider-link slider-item-two">
               <img src="img/nerds-index-slide2_1.png" width="760" height="431" alt="Картинка с компьютером">
             </div>
           </div>
 
           <div class="slider-item">
-            <div class="slider-item-wrapper3">
-              <h3>Только ночь, только хардкор.</h3>
-              <p class="text-slider">Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <div class="slider-item-wrapper-three">
+              <h3>Только ночь,<br> только хардкор.</h3>
+              <p class="text-slider">Работать днём, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
               <a class="button button--red slide__button" href="#">Узнать больше</a>
             </div>
-            <div class="slider-item-three">
+            <div class="slider-link slider-item-three">
               <img src="img/nerds-index-slide3_1.png" width="760" height="431" alt="Картинка с Айпадом">
             </div>
 
 
           </div>
             <div class="slider-controls">
-              <button type="button" name="slider"></button>
-              <button type="button" name="slider"></button>
-              <button type="button" name="slider"></button>
+              <button class="current" type="button" name="slider" aria-label="Первый слайд"></button>
+              <button type="button" name="slider" aria-label="Второй слайд"></button>
+              <button type="button" name="slider" aria-label="Третий слайд"></button>
             </div>
         </div>
       </section>
@@ -119,8 +119,8 @@
             <h3 class="title-features">Выполняем заказы на разработку:</h3>
             <ul class="features-list">
               <li class="features-item">Веб-сайтов любой сложности</li>
-              <li class="features-item features-item2">Мобильных приложений для IOS и Android</li>
-              <li class="features-item features-item3">Слайдшоу и видео для корпоративных презентаций</li>
+              <li class="features-item features-item-two">Мобильных приложений для IOS и Android</li>
+              <li class="features-item features-item-three">Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
           </div>
 
@@ -148,10 +148,26 @@
         <section class="partners">
           <h2 class="visually-hidden">Ссылки на партнеров</h2>
           <ul class="partners-logo">
-            <li class="logo"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.png" width="199" height="68" alt="HTML Академия"></a></li>
-            <li class="logo"><a href="#"><img src="img/logo-barbershop.png" width="209" height="90" alt="Барбершоп"></a></li>
-            <li class="logo"><a href="#"><img src="img/logo-pinc.png" width="185" height="52" alt="Pinc"></a></li>
-            <li class="logo"><a href="#"><img src="img/logo-mishka.png" width="173" height="84" alt="Mishka"></a></li>
+            <li class="logo">
+              <a class="logo-link logo-link-html" href="https://htmlacademy.ru/intensive/htmlcss">
+                <img src="img/logo-html.png" width="199" height="68" alt="HTML Академия">
+              </a>
+            </li>
+            <li class="logo">
+              <a class="logo-link logo-link-barbershop" href="#">
+                <img src="img/logo-barbershop.png" width="209" height="90" alt="Барбершоп">
+              </a>
+            </li>
+            <li class="logo">
+              <a class="logo-link logo-link-pinc" href="#">
+                <img src="img/logo-pinc.png" width="185" height="52" alt="Pinc">
+              </a>
+            </li>
+            <li class="logo">
+              <a class="logo-link logo-link-mishka" href="#">
+                <img src="img/logo-mishka.png" width="173" height="84" alt="Mishka">
+              </a>
+            </li>
           </ul>
         </section>
       </div>
@@ -160,13 +176,13 @@
         <h2 class="visually-hidden">Google карта</h2>
         <div class="container">
           <div class="contacts">
-            <b class="contacts-title">Nёrds design studio</b>
+            <p class="contacts-title"><b >Nёrds design studio</b></p>
             <address class="contacts-address">
               191186, Санкт-Петербург,<br>
               ул. Б. Конюшенная, д. 19/8<br>
-              <a class="contacts-telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+              <p class="contacts-telephone"><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
             </address>
-            <a class="contacts-button" href="#">Напишите нам</a>
+            <p class="contacts-button"><a href="#">Напишите нам</a></p>
           </div>
         </div>
         <div class="map">
@@ -209,7 +225,7 @@
             </ul>
           </div>
 
-          <div>
+          <div class="page-footer-appeal">
             <div class="appeal">
               <b class="appeal-head">Давайте дружить, это выгодно!</b>
               <p class="discount">Скидка 10% для друзей из социальных сетей.</p>
