--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul class="site-navigation">
             <li class="nav-item"><a href="#">Студия</a></li>
             <li class="nav-item"><a href="#">Клиенты</a></li>
-            <li class="nav-item nav-activ-catalog"><a href="catalog.html">Магазин</a></li>
+            <li class="nav-item"><a href="catalog.html">Магазин</a></li>
             <li class="nav-item"><a href="#">Контакты</a></li>
           </ul>
           <a class="nav-basket" href="#">Корзина</a>
@@ -186,7 +186,7 @@
           </div>
         </div>
         <div class="map">
-          <img src="img/map.png" width="1440" alt="Googlemaps">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="100%" height="416"></iframe>
         </div>
       </section>
 
@@ -240,16 +240,13 @@
       <fieldset>
         <h2 class="feedback-title">Напишите нам</h2>
         <form class="appointment-page">
-          <div>
-
-          </div>
           <p>
             <label class="feedback-yourname" for="name">Ваше имя:</label>
             <input class="feedback-name" type="text" name="name" id="name" placeholder="Имя Фамилия">
           </p>
           <p>
             <label class="feedback-email" for="email">Ваш email:</label>
-            <input class="form-email" type="email" name="email" id="email" placeholder="email@exampl.com">
+            <input class="form-email" type="email" name="email" id="email" placeholder="email@example.com">
           </p>
 
           <div class="appointment-text">
@@ -259,6 +256,8 @@
           <p>
             <button class="button feedback-button" type="submit">Отправить</button>
           </p>
+          <button type="button" class="feedback-close" name="btn-feedback-close" aria-label="Закрыть">
+          </button>
         </form>
       </fieldset>
     </section>
