--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="page-body">
 
     <header class="main-header">
       <div class="container">
@@ -37,8 +37,10 @@
         <div class="table-cost">
 
           <section class="table">
-
             <h2 class="visually-hidden">Фильтр выбора шаблона</h2>
+
+            <form method="get" action="https://echo.htmlacademy.ru">
+
 
               <fieldset class="cost">
                 <legend class="cost-title">Стоимость:</legend>
@@ -62,51 +64,52 @@
                 </div>
               </fieldset>
 
-                <fieldset class="filter-view">
-                  <legend class="filter-view-title">Сетка:</legend>
-                  <ul class="filter-view-list" role="none">
-                    <li class="filter-option">
-                        <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="Adaptive" value="Adaptive" checked>
-                        <label for="Adaptive">Адаптивная</label>
-                    </li>
-                    <li class="filter-option">
-                      <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="Fixed" value="Fixed">
-                      <label for="Fixed">Фиксированная</label>
-                    </li>
-                    <li class="filter-option">
-                      <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="Rubber" value="Rubber">
-                      <label for="Rubber">Резиновая</label>
-                    </li>
-                  </ul>
-                </fieldset>
 
-                <fieldset class="slider_catalog">
-                  <legend class="slider_catalog-title">Особенности:</legend>
-                  <ul class="slider_catalog-list" role="none">
-                    <li class="filter-option filter-checkbox">
-                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features1" id="Slider" checked >
-                      <label for="Slider">Слайдер</label>
-                    </li>
-                    <li class="filter-option filter-checkbox">
-                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features2" id="block_advantage">
-                      <label class="filter-item" for="block_advantage">Блок преимуществ</label>
-                    </li>
-                    <li class="filter-option filter-checkbox">
-                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features3" id="news" checked>
-                      <label for="news">Новости</label>
-                    </li>
-                    <li class="filter-option filter-checkbox">
-                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features4" id="gallery">
-                      <label for="gallery">Галерея</label>
-                    </li>
-                    <li class="filter-option filter-checkbox">
-                      <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features5" id="basket">
-                      <label for="basket">Корзина</label>
-                    </li>
-                  </ul>
-                </fieldset>
-                <input class="slider_catalog-button" type="submit" value="Показать">
-              </form>
+              <fieldset class="filter-view">
+                <legend class="filter-view-title">Сетка:</legend>
+                <ul class="filter-view-list" role="none">
+                  <li class="filter-option">
+                      <input class="visually-hidden filter-input-radio" type="radio" name="grid" id="Adaptive" value="Adaptive" checked>
+                      <label for="Adaptive">Адаптивная</label>
+                  </li>
+                  <li class="filter-option filter-option-two">
+                    <input class="visually-hidden filter-input-radio filter-input-radio-two" type="radio" name="grid" id="Fixed" value="Fixed">
+                    <label for="Fixed">Фиксированная</label>
+                  </li>
+                  <li class="filter-option">
+                    <input class="visually-hidden filter-input-radio filter-input-radio-three" type="radio" name="grid" id="Rubber" value="Rubber">
+                    <label class="" for="Rubber">Резиновая</label>
+                  </li>
+                </ul>
+              </fieldset>
+
+              <fieldset class="slider_catalog">
+                <legend class="slider_catalog-title">Особенности:</legend>
+                <ul class="slider_catalog-list" role="none">
+                  <li class="filter-option filter-checkbox">
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features1" id="Slider" checked >
+                    <label for="Slider">Слайдер</label>
+                  </li>
+                  <li class="filter-option filter-checkbox">
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features2" id="block_advantage">
+                    <label class="filter-item" for="block_advantage">Блок преимуществ</label>
+                  </li>
+                  <li class="filter-option filter-checkbox">
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features3" id="news" checked>
+                    <label for="news">Новости</label>
+                  </li>
+                  <li class="filter-option filter-checkbox">
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features4" id="gallery">
+                    <label for="gallery">Галерея</label>
+                  </li>
+                  <li class="filter-option filter-checkbox">
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features5" id="basket">
+                    <label for="basket">Корзина</label>
+                  </li>
+                </ul>
+              </fieldset>
+              <input class="slider_catalog-button" type="submit" value="Показать">
+            </form>
           </section>
         </div>
 
@@ -175,7 +178,7 @@
                   <a href="#">
                     <h3>Barbershop</h3>
                   </a>
-                  <p class="example-text">Сайт салона красоты. Для мужчин, да.</p>
+                  <p class="example-text">Сайт салона красоты.<br> Для мужчин, да.</p>
                   <a class="butten-price" href="#">9 900 ₽</a>
                 </div>
               </li>
@@ -187,7 +190,7 @@
                   <a href="#">
                     <h3>Mishka</h3>
                   </a>
-                  <p class="example-text">Интернет-магазин вязаных игрушек.</p>
+                  <p class="example-text">Интернет-магазин<br> вязаных игрушек.</p>
                   <a class="butten-price" href="#">9 900 ₽</a>
                 </div>
               </li>
@@ -225,7 +228,7 @@
                   </li>
                   <li class="nav-page-item"><a href="#">2<span class="visually-hidden">страница</span></a></li>
                   <li class="nav-page-item"><a href="#">3<span class="visually-hidden">страница</span></a></li>
-                  <li class="nav-page-item"><a class="pade-next" href="#">Следующая</a></li>
+                  <li class="nav-page-item-last nav-page-item"><a class="pade-next" href="#">Следующая</a></li>
                 </ul>
               </nav>
           </div>
@@ -249,16 +252,17 @@
             </address>
             <p class="contacts-button"><a href="#">Напишите нам</a></p>
           </div>
+          <div class=""></div>
         </div>
         <div class="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="100%" height="416"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" height="416"></iframe>
         </div>
       </section>
 
 
     </main>
 
-    <footer class="page-footer main-footer">
+    <footer class="main-footer">
       <div class="container">
         <div class="page-footer">
           <div class="page-footer-social">
