Допуск на защиту

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>Сайт компании "Нёрдс"</title>
@@ -19,14 +20,13 @@
           <ul class="site-navigation">
             <li class="nav-item"><a href="#">Студия</a></li>
             <li class="nav-item"><a href="#">Клиенты</a></li>
-            <li class="nav-item nav-activ-catalog"><a href="catalog.html">Магазин</a></li>
+            <li class="nav-item nav-activ-catalog"><a>Магазин</a></li>
             <li class="nav-item"><a href="#">Контакты</a></li>
           </ul>
           <a class="nav-basket" href="#">Корзина</a>
         </nav>
       </div>
     </header>
-
 
     <main class="page-catalog">
 
@@ -40,7 +40,6 @@
             <h2 class="visually-hidden">Фильтр выбора шаблона</h2>
 
             <form method="get" action="https://echo.htmlacademy.ru">
-
 
               <fieldset class="cost">
                 <legend class="cost-title">Стоимость:</legend>
@@ -64,7 +63,6 @@
                 </div>
               </fieldset>
 
-
               <fieldset class="filter-view">
                 <legend class="filter-view-title">Сетка:</legend>
                 <ul class="filter-view-list" role="none">
@@ -83,32 +81,32 @@
                 </ul>
               </fieldset>
 
-              <fieldset class="slider_catalog">
-                <legend class="slider_catalog-title">Особенности:</legend>
-                <ul class="slider_catalog-list" role="none">
+              <fieldset class="slider-catalog">
+                <legend class="slider-catalog-title">Особенности:</legend>
+                <ul class="slider-catalog-list" role="none">
                   <li class="filter-option filter-checkbox">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features1" id="Slider" checked >
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="slider" id="Slider" checked >
                     <label for="Slider">Слайдер</label>
                   </li>
                   <li class="filter-option filter-checkbox">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features2" id="block_advantage">
-                    <label class="filter-item" for="block_advantage">Блок преимуществ</label>
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="block-advantage" id="block-advantage">
+                    <label class="filter-item" for="block-advantage">Блок преимуществ</label>
                   </li>
                   <li class="filter-option filter-checkbox">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features3" id="news" checked>
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="news" id="news" checked>
                     <label for="news">Новости</label>
                   </li>
                   <li class="filter-option filter-checkbox">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features4" id="gallery">
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="gallery" id="gallery">
                     <label for="gallery">Галерея</label>
                   </li>
                   <li class="filter-option filter-checkbox">
-                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="features5" id="basket">
+                    <input class="visually-hidden filter-input-checkbox" type="checkbox" name="basket" id="basket">
                     <label for="basket">Корзина</label>
                   </li>
                 </ul>
               </fieldset>
-              <input class="slider_catalog-button" type="submit" value="Показать">
+              <input class="slider-catalog-button" type="submit" value="Показать">
             </form>
           </section>
         </div>
@@ -224,7 +222,7 @@
               <nav class="nav-page">
                 <ul class="nav-page-list">
                   <li class="nav-page-item nav-page-item-activ">
-                    <a href="#">1<span class="visually-hidden">страница</span></a>
+                    <a>1<span class="visually-hidden">страница</span></a>
                   </li>
                   <li class="nav-page-item"><a href="#">2<span class="visually-hidden">страница</span></a></li>
                   <li class="nav-page-item"><a href="#">3<span class="visually-hidden">страница</span></a></li>
@@ -252,7 +250,6 @@
             </address>
             <p class="contacts-button"><a href="#">Напишите нам</a></p>
           </div>
-          <div class=""></div>
         </div>
         <div class="map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" height="416"></iframe>
@@ -274,7 +271,7 @@
                     <g id="vk-icon">
                     <path id="Shape" d="M16.3923 11.51C17.3497 11.201 18.5754 13.55 19.8802 14.449C20.8595 15.13 21.6096 14.983 21.6096 14.983L25.0874 14.933C25.0874 14.933 26.9049 14.821 26.0457 13.379C25.9746 13.259 25.542 12.31 23.4571 10.357C21.2771 8.314 21.5725 8.645 24.1971 5.11302C25.7964 2.96002 26.4363 1.64503 26.236 1.08503C26.0437 0.546035 24.8691 0.686034 24.8691 0.686034L20.9506 0.713034C20.5691 0.714034 20.2457 0.832034 20.0985 1.22803C20.0955 1.23203 19.4766 2.89402 18.6515 4.30702C16.908 7.29601 16.2121 7.455 15.9237 7.26801C15.2618 6.83501 15.429 5.53101 15.429 4.60402C15.429 1.70703 15.8616 0.499035 14.5818 0.187037C14.1542 0.083037 13.8418 0.0150373 12.7513 0.00503739C11.3573 -0.0159625 10.1737 0.0050374 9.50277 0.334036C9.05716 0.557035 8.71568 1.04603 8.92297 1.07403C9.18333 1.10903 9.76714 1.23403 10.0796 1.66003C10.4811 2.21203 10.4691 3.44902 10.4691 3.44902C10.4691 3.44902 10.6984 6.86001 9.92836 7.28301C9.39963 7.573 8.67663 6.98101 7.12147 4.26702C6.32737 2.87902 5.72754 1.34503 5.72754 1.34503C5.72754 1.34503 5.61138 1.06003 5.40109 0.904033C5.15074 0.719034 4.80025 0.660034 4.80025 0.660034L1.0811 0.684034C1.0811 0.684034 0.522321 0.700034 0.317037 0.946033C0.134784 1.16403 0.302016 1.61403 0.302016 1.61403C0.302016 1.61403 3.21506 8.495 6.51363 11.961C9.53782 15.143 12.9746 14.932 12.9746 14.932H14.5317C14.5317 14.932 15.0014 14.878 15.2417 14.62C15.466 14.38 15.456 13.929 15.456 13.929C15.456 13.929 15.425 11.82 16.3923 11.51Z" fill="white"/>
                     </g>
-                    </svg>
+                  </svg>
                 </a>
               </li>
               <li class="footer-item">
@@ -282,13 +279,15 @@
                   <span class="visually-hidden">Фейсбук</span>
                   <svg width="13" height="22" viewBox="0 0 13 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12.3847 4V0H8.37917C6.16696 0 4.37361 1.79086 4.37361 4V8H0.368042V12H4.37361V22H8.37917V12H12.3847V8H8.37917V4H12.3847Z" fill="white"/>
-                    </svg>
+                  </svg>
                 </a>
               </li>
               <li class="footer-item">
                 <a class="social-button" href="#">
                   <span class="visually-hidden">Инстаграм</span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                    <path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/>
+                  </svg>
                 </a>
               </li>
             </ul>
@@ -303,7 +302,6 @@
         </div>
       </div>
     </footer>
-
     <section class="appointment">
       <fieldset class="appointment-page">
         <h2 class="feedback-title">Напишите нам</h2>
@@ -325,5 +323,5 @@
         </form>
       </fieldset>
     </section>
- </body>
+  </body>
 </html>
