--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
-          <a class="main-header-logo" href="index.html">
+          <a class="main-header-logo">
             <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
           </a>
           <ul class="site-navigation">
@@ -41,7 +41,7 @@
             <div class="slider-item-wrapper">
               <h3>Долго, дорого, скрупулезно.</h3>
               <p class="text-slider">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-              <a class="button button--red slide__button" href="#">Узнать больше</a>
+              <a class="button button-red slide-button" href="#">Узнать больше</a>
             </div>
             <div class="slider-link slider-item-one">
               <img src="img/nerds-index-slide1_1.png" width="760" height="431" alt="Картинка с телефонами">
@@ -52,7 +52,7 @@
             <div class="slider-item-wrapper slider-item-wrapper-two">
               <h3>Любим математику как никто другой</h3>
               <p class="text-slider">Никакого креатива, только математические формулы <br>для расчета идеальных пропорций.</p>
-              <a class="button button--red slide__button" href="#">Узнать больше</a>
+              <a class="button button-red slide-button" href="#">Узнать больше</a>
             </div>
             <div class="slider-link slider-item-two">
               <img src="img/nerds-index-slide2_1.png" width="760" height="431" alt="Картинка с компьютером">
@@ -63,7 +63,7 @@
             <div class="slider-item-wrapper-three">
               <h3>Только ночь,<br> только хардкор.</h3>
               <p class="text-slider">Работать днём, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-              <a class="button button--red slide__button" href="#">Узнать больше</a>
+              <a class="button button-red slide-button" href="#">Узнать больше</a>
             </div>
             <div class="slider-link slider-item-three">
               <img src="img/nerds-index-slide3_1.png" width="760" height="431" alt="Картинка с Айпадом">
