--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Сайт компании "Нёрдс"</title>
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/min.style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
@@ -208,7 +208,7 @@
             </div>
           </li>
         </ul>
-        <div class="pagination-page">
+        <div class="pagination">
           <ul class="pagination-page-list">
             <li class="pagination-page-item-active">
               <a>1<span class="visually-hidden">страница</span></a>
