Защита личного проекта «Нёрдс»
промежуточной архив

--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
       </a>
       <nav class="main-navigation">
         <ul class="site-navigation">
-          <li class="nav-item"><a href="#">Студия</a></li>
-          <li class="nav-item"><a href="#">Клиенты</a></li>
-          <li class="nav-item"><a href="catalog.html">Магазин</a></li>
-          <li class="nav-item"><a href="#">Контакты</a></li>
+          <li class="nav-item">
+            <a href="#">Студия</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Клиенты</a>
+          </li>
+          <li class="nav-item">
+            <a href="catalog.html">Магазин</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Контакты</a>
+          </li>
         </ul>
       </nav>
       <a class="nav-basket" href="#">Корзина</a>
@@ -39,7 +47,7 @@
             <a class="button button-red slider-button" href="#">Узнать больше</a>
           </div>
           <div class="slider-link slider-item-one">
-            <img src="img/nerds-index-slide1_1.png" width="760" height="431" alt="Картинка с телефонами">
+            <img src="img/nerds-index-slide1-1.png" width="760" height="431" alt="Картинка с телефонами">
           </div>
         </div>
         <div class="slider-item">
@@ -50,7 +58,7 @@
             <a class="button button-red slider-button" href="#">Узнать больше</a>
           </div>
           <div class="slider-link slider-item-two">
-            <img src="img/nerds-index-slide2_1.png" width="760" height="431" alt="Картинка с компьютером">
+            <img src="img/nerds-index-slide2-1.png" width="760" height="431" alt="Картинка с компьютером">
           </div>
         </div>
         <div class="slider-item">
@@ -61,7 +69,7 @@
             <a class="button button-red slider-button" href="#">Узнать больше</a>
           </div>
           <div class="slider-link slider-item-three">
-            <img src="img/nerds-index-slide3_1.png" width="760" height="431" alt="Картинка с Айпадом">
+            <img src="img/nerds-index-slide3-1.png" width="760" height="431" alt="Картинка с Айпадом">
           </div>current
         </div>
         <div class="slider">
@@ -81,7 +89,7 @@
           <li class="services-item">
             <h3 class="services-title">Веб-сайты</h3>
             <p class="services-img">
-              <img src="img/illustration-1_1.png" width="300" height="146" alt="Красная картинка с компьютером">
+              <img src="img/illustration-1-1.png" width="300" height="146" alt="Красная картинка с компьютером">
             </p>
             <p class="services-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a href="#" class="services-button button-red">Заказать</a>
@@ -89,7 +97,7 @@
           <li class="services-item">
             <h3 class="services-title">Приложения</h3>
             <p class="services-img">
-              <img src="img/illustration-2_1.png" width="300" height="146" alt="Зеленая с телефонами">
+              <img src="img/illustration-2-1.png" width="300" height="146" alt="Зеленая с телефонами">
             </p>
             <p class="services-text">Покорите топ-10 приложений <br>в AppStore и Google Play</p>
             <a href="#" class="services-button button-green">Заказать</a>
@@ -97,7 +105,7 @@
           <li class="services-item">
             <h3 class="services-title">Презентации</h3>
             <p class="services-img">
-              <img src="img/illustration-3_1.png" width="300" height="146" alt="Желтая со стендом">
+              <img src="img/illustration-3-1.png" width="300" height="146" alt="Желтая со стендом">
             </p>
             <p class="services-text">Вы даже не подозреваете, насколько вы изумительны!</p>
             <a href="#" class="services-button button-yellow">Заказать</a>
@@ -119,7 +127,7 @@
           </ul>
         </div>
         <div class="progress-page">
-          <img src="img/nerds-illustration_1.png" width="360" height="208" alt="Логотип Нёрдс 2">
+          <img src="img/nerds-illustration-1.png" width="360" height="208" alt="Логотип Нёрдс 2">
           <table class="progress">
             <caption class="progress-head">С 2004 года любим точность во всем:</caption>
             <tr class="progress-columns">
@@ -171,7 +179,7 @@
             ул. Б. Конюшенная, д. 19/8
             <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
           </address>
-          <a class="contacts-button" href="www.writeus.html">Напишите нам</a>
+          <a class="contacts-button" href="writeus.html">Напишите нам</a>
         </div>
       </div>
       <div class="map">
@@ -192,7 +200,7 @@
             <span class="visually-hidden">Вконтакте</span>
             <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g id="vk-icon">
-                <path id="Shape"
+                <path id="shape"
                   d="M16.3923 11.51C17.3497 11.201 18.5754 13.55 19.8802 14.449C20.8595 15.13 21.6096 14.983 21.6096 14.983L25.0874 14.933C25.0874 14.933 26.9049 14.821 26.0457 13.379C25.9746 13.259 25.542 12.31 23.4571 10.357C21.2771 8.314 21.5725 8.645 24.1971 5.11302C25.7964 2.96002 26.4363 1.64503 26.236 1.08503C26.0437 0.546035 24.8691 0.686034 24.8691 0.686034L20.9506 0.713034C20.5691 0.714034 20.2457 0.832034 20.0985 1.22803C20.0955 1.23203 19.4766 2.89402 18.6515 4.30702C16.908 7.29601 16.2121 7.455 15.9237 7.26801C15.2618 6.83501 15.429 5.53101 15.429 4.60402C15.429 1.70703 15.8616 0.499035 14.5818 0.187037C14.1542 0.083037 13.8418 0.0150373 12.7513 0.00503739C11.3573 -0.0159625 10.1737 0.0050374 9.50277 0.334036C9.05716 0.557035 8.71568 1.04603 8.92297 1.07403C9.18333 1.10903 9.76714 1.23403 10.0796 1.66003C10.4811 2.21203 10.4691 3.44902 10.4691 3.44902C10.4691 3.44902 10.6984 6.86001 9.92836 7.28301C9.39963 7.573 8.67663 6.98101 7.12147 4.26702C6.32737 2.87902 5.72754 1.34503 5.72754 1.34503C5.72754 1.34503 5.61138 1.06003 5.40109 0.904033C5.15074 0.719034 4.80025 0.660034 4.80025 0.660034L1.0811 0.684034C1.0811 0.684034 0.522321 0.700034 0.317037 0.946033C0.134784 1.16403 0.302016 1.61403 0.302016 1.61403C0.302016 1.61403 3.21506 8.495 6.51363 11.961C9.53782 15.143 12.9746 14.932 12.9746 14.932H14.5317C14.5317 14.932 15.0014 14.878 15.2417 14.62C15.466 14.38 15.456 13.929 15.456 13.929C15.456 13.929 15.425 11.82 16.3923 11.51Z"
                   fill="white" />
               </g>
