Защита личного проекта «Нёрдс»
Окончательный вариант

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
         <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
       </a>
       <nav class="main-navigation">
-        <ul class="site-navigation">
+        <ul class="site-navigation site-navigation-catalog">
           <li class="nav-item">
             <a href="#">Студия</a>
           </li>
